# ImageRec

./: .gitignore  Affordance.h  CMakeLists.txt  Classifier.cpp  Classifier.h  DetectedObject.h  Detector.h  FileManager.cpp  FileManager.h  GoogleCNN.cpp  GoogleCNN.h  ImageNorm.cpp  ImageNorm.h  ImageRecognition.sln  ImageTransformBar.cpp  ImageTransformBar.h  Kinect.cpp  Kinect.h  KinectTreatment.cpp  KinectTreatment.h  MainWindow.cpp  MainWindow.hpp  MaskRCNN.cpp  MaskRCNN.h  ObjectAff.cpp  ObjectAff.h  Policy.cpp  Policy.h  README.md  ROISelection.cpp  ROISelection.h  RealSense.cpp  RealSense.h  RealSenseVideo.cpp  RealSenseVideo.h  VideoArea.cpp  VideoArea.hpp  VideoSource.h  WebCam.cpp  WebCam.h  (+15 more)
Css/: Activity.css  Frame.css
Docs/html/: _activity_region_8h.html  _activity_region_8h__dep__incl.map  _activity_region_8h__dep__incl.md5  _activity_region_8h__incl.map  _activity_region_8h__incl.md5  _activity_region_8h_source.html  _affordance_8h.html  _affordance_8h__dep__incl.map  _affordance_8h__incl.map  _affordance_8h__incl.md5  _affordance_8h_source.html  _detected_object_8h.html  _detected_object_8h.js  (+398 more)
Files-yolo/: rs-dnn.cpp  voc-hand.data  yolov3-hand.cfg  yolov3-voc-hand.cfg
Header files/: ActivityRegion.h  ImageSegmentationManual.h  ImageTreatment.h  Items.h  Policy.h  RecoManager.h  Serializable.h  selectiveSearchDepth.h
InfosCNN/: confMatrix.txt  deploy.prototxt  det_synset_words.txt  imagenet_mean.binaryproto  solver.prototxt  train_val.prototxt
MaitriseImageRec/: CInputDialog.cpp  CInputDialog.h  CNN.cpp  CNN.h  CaffeCNN.cpp  CaffeCNN.h  CaffeTools.h  ComputeImageMean.h  ConvertImageSet.h  Dbout.cpp  Dbout.h  FileManager.cpp  FileManager.h  GoogleVisionCNN.cpp  GoogleVisionCNN.h  ImageTreatment.cpp  ImageTreatment.h  ImgSegCNN.cpp  KinectTreatment.cpp  KinectTreatment.h  MaitriseImageRec.cpp  MaitriseImageRec.h  MaitriseImageRec.rc  MaitriseImageRec.vcxproj  MaitriseImageRec.vcxproj.filters  MaitriseImageRecDlg.cpp  MaitriseImageRecDlg.h  NtKinect.h  ReadMe.txt  SaveImageDialog.cpp  SaveImageDialog.h  Selector.cpp  Selector.h  compute_image_mean.cpp  convert_imageset.cpp  easyCNN.cpp  easyCNN.h  inkpicture1.cpp  inkpicture1.h  resource.h  (+2 more)
OldFiles/: GoogleVisionCNN.cpp  MainWindow.cpp  MainWindow.hpp  Threading.cpp  Threading.h  VideoArea.hpp
PlanRecoByPolicy/: Main.py
Source files/: ActivityRegion.cpp  CInputDialog.cpp  FileManager.cpp  ImageSegmentationManual.cpp  ImageTreatment.cpp  Items.cpp  ObjectAff.cpp  Policy.cpp  RecoManager.cpp
controller/: ManageSourceVideo.cpp  ManageSourceVideo.h  Subject.h
model/: Observer.h  RecognitionManager.cpp  RecognitionManager.h  Traces.cpp  Traces.h
objectModel/: classes.name  label1.pbtxt  yolov2-ttt.cfg  yolov3-ttt.cfg
src/: CMakeLists.txt  button.cpp  button.h  config.txt  configuration.cpp  configuration.h  fenetreparametres.cpp  fenetreparametres.h  fenetreparametres.ui  fenetreprincipale.cpp  fenetreprincipale.h  fenetreprincipale.ui  frame.cpp  frame.h  icones.qrc  image.cpp  images.qrc  label.cpp  label.h  main.cpp  reconnaissance-plans-activites.pro  settings.ini  video.cpp  video.h
src/Header files/: ActivityRegion.h  ObjectAff.h
src/Header files/CNN/: YoloGPU.h  cv-helpers.hpp
src/Header files/VideoSources/: VideoSource.h
src/PARC/Plan_Library/: extendedPlanLibrary.cpp  planLibrary.cpp  rule.cpp
src/PARC/include/: extendedPlanLibrary.h  planLibrary.h  rule.h  solver.h
src/PARC/src/solver/: solver.cpp  testSolver.cpp
src/PlanRecoByPolicy/Domain/: SimpleNavigation.pomdpx  monroeDomain
src/PlanRecoByPolicy/Policy/: SimpleNavigation.dot  planBib.dot  planBib.policy
src/PlanRecoByPolicy/PolicyGenerator/: PolicyGenerator.sh
src/Source files/: ActivityRegion.cpp  ImageTreatment.cpp  RecoManager.cpp  Socket.cpp
src/Source files/CNN/: MaskRCNN.cpp  caffe.cpp
src/activities/: ActivityRegion.cpp  ActivityRegion.h  Affordance.cpp  Affordance.h  DetectedObject.h  Detector.h  ImageTreatment.cpp  ImageTreatment.h  Information Ecran.txt  ObjectAff.cpp  ObjectAff.h  ObjectsMat.cpp  ObjectsMat.h  Policy.cpp  Policy.h  RecoManager.cpp  RecoManager.h  Serializable.h  Socket.cpp  Socket.h  Tracedistances.cpp  Tracedistances.h  Tracemanager.cpp  Tracemanager.h  selectiveSearchDepth.h
src/activities/CNN/: CNN.h  CaffeCNN.cpp  MaskRCNN.cpp  MaskRCNN.h  Yolo.h  YoloCPU.cpp  YoloCPU.h  YoloGPU.cpp  YoloGPU.h
src/activities/Models/hand/: label.pbtxt
src/activities/VideoSources/: Kinect.cpp  Kinect.h  RealSense.cpp  RealSense.h  RealSenseVideo.cpp  RealSenseVideo.h  VideoSource.h  WebCam.cpp  WebCam.h
src/activities/cnn/: CaffeCNN.cpp  CaffeCNN.h  ImgSegCNN.cpp  MaskRCNN.cpp  MaskRCNN.h  Yolo.h  YoloCPU.cpp  YoloCPU.h  YoloGPU.cpp  YoloGPU.h
src/activities/sources/: Kinect.cpp  Kinect.h  RealSense.cpp  RealSense.h  RealSenseVideo.cpp  RealSenseVideo.h  VideoFeedTypes.h  VideoSource.h  WebCam.cpp  WebCam.h
src/config/: settings.ini
src/handModel/: classes.name
src/interface/: NotifyMessageBox.cpp  NotifyMessageBox.h  button.cpp  button.h  configuration.cpp  configuration.h  fenetreparametres.cpp  fenetreparametres.h  fenetreparametres.ui  fenetreprincipale.cpp  fenetreprincipale.h  fenetreprincipale.ui  image.cpp  image.h  label.h  video.cpp  video.h
src/objectModel/: label.pbtxt
src/plans/: Solver.py  oldMain.py
src/plans/Domain/: Beverage  Beverage.pomdpx
src/plans/GraphNavigator/: Policy.py
src/plans/Policy/: Beverage.dot  SimpleNavigation.policy
src/plans/UI/: Simple.dot  UI.py
src/plans/include/: Domain.h  Generator.h  Parser.h  Solver.h  test.h
src/plans/src/: ActionTime.cpp  Domain.cpp  OurputNode.cpp  Output.cpp  Parser.cpp  PlanLibrary.cpp  ProductionRule.cpp  SmallDomain.cpp  Solver.cpp  test.cpp  testDomain.cpp
src/ressources/: domains.qrc  fonts.qrc  icones.qrc  images.qrc
src/ressources/domains/: smallDomain  smallDomain.txt
src/ressources/languages/: lang_en.ts
src/ressources/models/: balls.cfg  balls.name  c-kitchen.name  c.name  kitchen.data  yolo.data  yolov3-kitchen.cfg
trace/: trace.txt
view/: PrimaryWindow.cpp  PrimaryWindow.h
(+562 files in other folders)
